finish filter by price and by category, add sort alphabetically and add button reset products/clean filters

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,7 +58,7 @@ input[type="range"]::-ms-thumb {
 }
 
 input[type="range"]::-webkit-slider-runnable-track {
-  background-color: #575f69;
+  background-color: #e4e4e4;
   height: 7px;
   border-radius: 20px;
 }
